@@ -1,31 +1,28 @@
 package rmit.saintgiong.authservice.common.security;
 
 import java.util.Collections;
+import java.util.List;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import jakarta.annotation.PostConstruct;
+import rmit.saintgiong.shared.type.Role;
 
 
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final GatewayAuthFilter gatewayAuthFilter;
-
-    public SecurityConfig(GatewayAuthFilter gatewayAuthFilter) {
-        this.gatewayAuthFilter = gatewayAuthFilter;
-    }
+    private final JweAuthRequestFilter jweAuthRequestFilter;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -35,46 +32,58 @@ public class SecurityConfig {
                         cors -> cors
                                 .configurationSource(
                                         corsConfigurationSource()))
-                .sessionManagement(
-                        session ->
-                                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-                .logout(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth
+                        // PUBLIC ENDPOINT FOR ACTUATOR and SWAGGER
                         .requestMatchers(
+                                "/actuator/**",
                                 "/swagger-ui.html",
                                 "/swagger-ui/**",
                                 "/api-docs/**",
                                 "/api-docs.yaml",
                                 "/v3/api-docs/**"
                         ).permitAll()
+
+                        // PUBLIC ENDPOINT FOR SERVICES
                         .requestMatchers(
-                                "/actuator/**"
-                        ).permitAll()
-                        .requestMatchers(
-                                "/google/**",
                                 "/register",
                                 "/login",
+                                "/google/**",
                                 "/dashboard"
                         ).permitAll()
+
+                        .requestMatchers(
+                                "/refresh-token",
+                                "/logout"
+                        ).hasAnyRole(Role.COMPANY.name(), Role.COMPANY_REFRESH.name())
+
                         .requestMatchers(
                                 "/verify-account",
                                 "/resend-otp"
-                        ).permitAll()
+                        ).hasRole(Role.COMPANY.name())
+
                         .anyRequest().authenticated()
                 )
-                .addFilterBefore(gatewayAuthFilter, UsernamePasswordAuthenticationFilter.class);
+                .logout(AbstractHttpConfigurer::disable)
+                .sessionManagement(
+                        session ->
+                                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+                .addFilterBefore(jweAuthRequestFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
     @Bean
     public UrlBasedCorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Collections.singletonList("*"));
-        configuration.setAllowedMethods(Collections.singletonList("*"));
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedMethods(List.of("*"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
